# safety-experiments

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
safety_experiments/: evals.ipynb
safety_experiments/activation_steering/: Activation Patching using NNSight.ipynb
safety_experiments/evaluations/: evals.ipynb
