[tool.poetry]
name = "safety-experiments"
version = "0.1.0"
description = ""
authors = ["therealmolf <miksbon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ruff = "^0.4.9"
mypy = "^1.10.0"
jupytext = "^1.16.2"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"
nnsight = "^0.2.19"
notebook = "^7.2.1"
deepeval = "^0.21.67"
langchain = "^0.2.9"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
